fix: li > a have wrong vertical-align

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,6 @@ body {
 }
 
 li > * {
-    vertical-align: baseline;
+    vertical-align: baseline!important;
 }
 
